<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TournamentActivity"
        android:background="#9B9B9B">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center">
            <TextView
                    android:text="@string/TourOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tourText"
                    android:textSize="48sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    app:backgroundTint="#8AFFFFFF"
                    android:text="@string/draw"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:typeface="monospace"
                    android:alpha="0.87"
                    android:textAllCaps="false"
                    app:strokeColor="#000000"
                    app:strokeWidth="2dp" style="@style/Widget.MaterialComponents.Button"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EnterResultButton"
                    app:backgroundTint="#888888"
                    android:text="@string/result"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:typeface="monospace"
                    android:alpha="0.95"
                    android:textAllCaps="false"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ButtonOpenTable"
                    app:backgroundTint="#888888"
                    android:text="@string/table"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:typeface="monospace"
                    android:alpha="0.95"
                    android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="182dp"
            app:srcCompat="@drawable/images"
            android:id="@+id/imageView2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-32dp"
            android:layout_marginTop="148dp"
    />
</RelativeLayout>